qt/gen_qtextformat.h

typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QPen QPen;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextImageFormat QTextImageFormat;
typedef struct QTextLength QTextLength;
typedef struct QTextListFormat QTextListFormat;
typedef struct QTextTableCellFormat QTextTableCellFormat;
typedef struct QTextTableFormat QTextTableFormat;
typedef struct QVariant QVariant;
QTextLength* QTextLength_new();
QTextLength* QTextLength_new2(int type, double value);
QTextLength* QTextLength_new3(QTextLength* param1);
int QTextLength_type(const QTextLength* self);
double QTextLength_value(const QTextLength* self, double maximumLength);
double QTextLength_rawValue(const QTextLength* self);
bool QTextLength_operatorEqual(const QTextLength* self, QTextLength* other);
bool QTextLength_operatorNotEqual(const QTextLength* self, QTextLength* other);
QVariant* QTextLength_ToQVariant(const QTextLength* self);
void QTextLength_delete(QTextLength* self);
QTextFormat* QTextFormat_new();
QTextFormat* QTextFormat_new2(int type);
QTextFormat* QTextFormat_new3(QTextFormat* rhs);
void QTextFormat_operatorAssign(QTextFormat* self, QTextFormat* rhs);
void QTextFormat_swap(QTextFormat* self, QTextFormat* other);
void QTextFormat_merge(QTextFormat* self, QTextFormat* other);
bool QTextFormat_isValid(const QTextFormat* self);
bool QTextFormat_isEmpty(const QTextFormat* self);
int QTextFormat_type(const QTextFormat* self);
int QTextFormat_objectIndex(const QTextFormat* self);
void QTextFormat_setObjectIndex(QTextFormat* self, int object);
QVariant* QTextFormat_property(const QTextFormat* self, int propertyId);
void QTextFormat_setProperty(QTextFormat* self, int propertyId, QVariant* value);
void QTextFormat_clearProperty(QTextFormat* self, int propertyId);
bool QTextFormat_hasProperty(const QTextFormat* self, int propertyId);
bool QTextFormat_boolProperty(const QTextFormat* self, int propertyId);
int QTextFormat_intProperty(const QTextFormat* self, int propertyId);
double QTextFormat_doubleProperty(const QTextFormat* self, int propertyId);
struct miqt_string QTextFormat_stringProperty(const QTextFormat* self, int propertyId);
QColor* QTextFormat_colorProperty(const QTextFormat* self, int propertyId);
QPen* QTextFormat_penProperty(const QTextFormat* self, int propertyId);
QBrush* QTextFormat_brushProperty(const QTextFormat* self, int propertyId);
QTextLength* QTextFormat_lengthProperty(const QTextFormat* self, int propertyId);
struct miqt_array /* of QTextLength* */  QTextFormat_lengthVectorProperty(const QTextFormat* self, int propertyId);
void QTextFormat_setProperty2(QTextFormat* self, int propertyId, struct miqt_array /* of QTextLength* */  lengths);
struct miqt_map /* of int to QVariant* */  QTextFormat_properties(const QTextFormat* self);
int QTextFormat_propertyCount(const QTextFormat* self);
void QTextFormat_setObjectType(QTextFormat* self, int type);
int QTextFormat_objectType(const QTextFormat* self);
bool QTextFormat_isCharFormat(const QTextFormat* self);
bool QTextFormat_isBlockFormat(const QTextFormat* self);
bool QTextFormat_isListFormat(const QTextFormat* self);
bool QTextFormat_isFrameFormat(const QTextFormat* self);
bool QTextFormat_isImageFormat(const QTextFormat* self);
bool QTextFormat_isTableFormat(const QTextFormat* self);
bool QTextFormat_isTableCellFormat(const QTextFormat* self);
QTextBlockFormat* QTextFormat_toBlockFormat(const QTextFormat* self);
QTextCharFormat* QTextFormat_toCharFormat(const QTextFormat* self);
QTextListFormat* QTextFormat_toListFormat(const QTextFormat* self);
QTextTableFormat* QTextFormat_toTableFormat(const QTextFormat* self);
QTextFrameFormat* QTextFormat_toFrameFormat(const QTextFormat* self);
QTextImageFormat* QTextFormat_toImageFormat(const QTextFormat* self);
QTextTableCellFormat* QTextFormat_toTableCellFormat(const QTextFormat* self);
bool QTextFormat_operatorEqual(const QTextFormat* self, QTextFormat* rhs);
bool QTextFormat_operatorNotEqual(const QTextFormat* self, QTextFormat* rhs);
QVariant* QTextFormat_ToQVariant(const QTextFormat* self);
void QTextFormat_setLayoutDirection(QTextFormat* self, int direction);
int QTextFormat_layoutDirection(const QTextFormat* self);
void QTextFormat_setBackground(QTextFormat* self, QBrush* brush);
QBrush* QTextFormat_background(const QTextFormat* self);
void QTextFormat_clearBackground(QTextFormat* self);
void QTextFormat_setForeground(QTextFormat* self, QBrush* brush);
QBrush* QTextFormat_foreground(const QTextFormat* self);
void QTextFormat_clearForeground(QTextFormat* self);
void QTextFormat_delete(QTextFormat* self);
QTextCharFormat* QTextCharFormat_new();
QTextCharFormat* QTextCharFormat_new2(QTextCharFormat* param1);
bool QTextCharFormat_isValid(const QTextCharFormat* self);
void QTextCharFormat_setFont(QTextCharFormat* self, QFont* font, int behavior);
void QTextCharFormat_setFontWithFont(QTextCharFormat* self, QFont* font);
QFont* QTextCharFormat_font(const QTextCharFormat* self);
void QTextCharFormat_setFontFamily(QTextCharFormat* self, struct miqt_string family);
struct miqt_string QTextCharFormat_fontFamily(const QTextCharFormat* self);
void QTextCharFormat_setFontFamilies(QTextCharFormat* self, struct miqt_array /* of struct miqt_string */  families);
QVariant* QTextCharFormat_fontFamilies(const QTextCharFormat* self);
void QTextCharFormat_setFontStyleName(QTextCharFormat* self, struct miqt_string styleName);
QVariant* QTextCharFormat_fontStyleName(const QTextCharFormat* self);
void QTextCharFormat_setFontPointSize(QTextCharFormat* self, double size);
double QTextCharFormat_fontPointSize(const QTextCharFormat* self);
void QTextCharFormat_setFontWeight(QTextCharFormat* self, int weight);
int QTextCharFormat_fontWeight(const QTextCharFormat* self);
void QTextCharFormat_setFontItalic(QTextCharFormat* self, bool italic);
bool QTextCharFormat_fontItalic(const QTextCharFormat* self);
void QTextCharFormat_setFontCapitalization(QTextCharFormat* self, int capitalization);
int QTextCharFormat_fontCapitalization(const QTextCharFormat* self);
void QTextCharFormat_setFontLetterSpacingType(QTextCharFormat* self, int letterSpacingType);
int QTextCharFormat_fontLetterSpacingType(const QTextCharFormat* self);
void QTextCharFormat_setFontLetterSpacing(QTextCharFormat* self, double spacing);
double QTextCharFormat_fontLetterSpacing(const QTextCharFormat* self);
void QTextCharFormat_setFontWordSpacing(QTextCharFormat* self, double spacing);
double QTextCharFormat_fontWordSpacing(const QTextCharFormat* self);
void QTextCharFormat_setFontUnderline(QTextCharFormat* self, bool underline);
bool QTextCharFormat_fontUnderline(const QTextCharFormat* self);
void QTextCharFormat_setFontOverline(QTextCharFormat* self, bool overline);
bool QTextCharFormat_fontOverline(const QTextCharFormat* self);
void QTextCharFormat_setFontStrikeOut(QTextCharFormat* self, bool strikeOut);
bool QTextCharFormat_fontStrikeOut(const QTextCharFormat* self);
void QTextCharFormat_setUnderlineColor(QTextCharFormat* self, QColor* color);
QColor* QTextCharFormat_underlineColor(const QTextCharFormat* self);
void QTextCharFormat_setFontFixedPitch(QTextCharFormat* self, bool fixedPitch);
bool QTextCharFormat_fontFixedPitch(const QTextCharFormat* self);
void QTextCharFormat_setFontStretch(QTextCharFormat* self, int factor);
int QTextCharFormat_fontStretch(const QTextCharFormat* self);
void QTextCharFormat_setFontStyleHint(QTextCharFormat* self, int hint);
void QTextCharFormat_setFontStyleStrategy(QTextCharFormat* self, int strategy);
int QTextCharFormat_fontStyleHint(const QTextCharFormat* self);
int QTextCharFormat_fontStyleStrategy(const QTextCharFormat* self);
void QTextCharFormat_setFontHintingPreference(QTextCharFormat* self, int hintingPreference);
int QTextCharFormat_fontHintingPreference(const QTextCharFormat* self);
void QTextCharFormat_setFontKerning(QTextCharFormat* self, bool enable);