qt/gen_qtextformat.nim


proc fcQTextLength_new(): ptr cQTextLength {.importc: "QTextLength_new".}
proc fcQTextLength_new2(typeVal: cint, value: float64): ptr cQTextLength {.importc: "QTextLength_new2".}
proc fcQTextLength_new3(param1: pointer): ptr cQTextLength {.importc: "QTextLength_new3".}
proc fcQTextLength_typeX(self: pointer, ): cint {.importc: "QTextLength_type".}
proc fcQTextLength_value(self: pointer, maximumLength: float64): float64 {.importc: "QTextLength_value".}
proc fcQTextLength_rawValue(self: pointer, ): float64 {.importc: "QTextLength_rawValue".}
proc fcQTextLength_operatorEqual(self: pointer, other: pointer): bool {.importc: "QTextLength_operatorEqual".}
proc fcQTextLength_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QTextLength_operatorNotEqual".}
proc fcQTextLength_ToQVariant(self: pointer, ): pointer {.importc: "QTextLength_ToQVariant".}
proc fcQTextLength_delete(self: pointer) {.importc: "QTextLength_delete".}
proc fcQTextFormat_new(): ptr cQTextFormat {.importc: "QTextFormat_new".}
proc fcQTextFormat_new2(typeVal: cint): ptr cQTextFormat {.importc: "QTextFormat_new2".}
proc fcQTextFormat_new3(rhs: pointer): ptr cQTextFormat {.importc: "QTextFormat_new3".}
proc fcQTextFormat_operatorAssign(self: pointer, rhs: pointer): void {.importc: "QTextFormat_operatorAssign".}
proc fcQTextFormat_swap(self: pointer, other: pointer): void {.importc: "QTextFormat_swap".}
proc fcQTextFormat_merge(self: pointer, other: pointer): void {.importc: "QTextFormat_merge".}
proc fcQTextFormat_isValid(self: pointer, ): bool {.importc: "QTextFormat_isValid".}
proc fcQTextFormat_isEmpty(self: pointer, ): bool {.importc: "QTextFormat_isEmpty".}
proc fcQTextFormat_typeX(self: pointer, ): cint {.importc: "QTextFormat_type".}
proc fcQTextFormat_objectIndex(self: pointer, ): cint {.importc: "QTextFormat_objectIndex".}
proc fcQTextFormat_setObjectIndex(self: pointer, objectVal: cint): void {.importc: "QTextFormat_setObjectIndex".}
proc fcQTextFormat_property(self: pointer, propertyId: cint): pointer {.importc: "QTextFormat_property".}
proc fcQTextFormat_setProperty(self: pointer, propertyId: cint, value: pointer): void {.importc: "QTextFormat_setProperty".}
proc fcQTextFormat_clearProperty(self: pointer, propertyId: cint): void {.importc: "QTextFormat_clearProperty".}
proc fcQTextFormat_hasProperty(self: pointer, propertyId: cint): bool {.importc: "QTextFormat_hasProperty".}
proc fcQTextFormat_boolProperty(self: pointer, propertyId: cint): bool {.importc: "QTextFormat_boolProperty".}
proc fcQTextFormat_intProperty(self: pointer, propertyId: cint): cint {.importc: "QTextFormat_intProperty".}
proc fcQTextFormat_doubleProperty(self: pointer, propertyId: cint): float64 {.importc: "QTextFormat_doubleProperty".}
proc fcQTextFormat_stringProperty(self: pointer, propertyId: cint): struct_miqt_string {.importc: "QTextFormat_stringProperty".}
proc fcQTextFormat_colorProperty(self: pointer, propertyId: cint): pointer {.importc: "QTextFormat_colorProperty".}
proc fcQTextFormat_penProperty(self: pointer, propertyId: cint): pointer {.importc: "QTextFormat_penProperty".}
proc fcQTextFormat_brushProperty(self: pointer, propertyId: cint): pointer {.importc: "QTextFormat_brushProperty".}
proc fcQTextFormat_lengthProperty(self: pointer, propertyId: cint): pointer {.importc: "QTextFormat_lengthProperty".}
proc fcQTextFormat_lengthVectorProperty(self: pointer, propertyId: cint): struct_miqt_array {.importc: "QTextFormat_lengthVectorProperty".}
proc fcQTextFormat_setProperty2(self: pointer, propertyId: cint, lengths: struct_miqt_array): void {.importc: "QTextFormat_setProperty2".}
proc fcQTextFormat_properties(self: pointer, ): struct_miqt_map {.importc: "QTextFormat_properties".}
proc fcQTextFormat_propertyCount(self: pointer, ): cint {.importc: "QTextFormat_propertyCount".}
proc fcQTextFormat_setObjectType(self: pointer, typeVal: cint): void {.importc: "QTextFormat_setObjectType".}
proc fcQTextFormat_objectType(self: pointer, ): cint {.importc: "QTextFormat_objectType".}
proc fcQTextFormat_isCharFormat(self: pointer, ): bool {.importc: "QTextFormat_isCharFormat".}
proc fcQTextFormat_isBlockFormat(self: pointer, ): bool {.importc: "QTextFormat_isBlockFormat".}
proc fcQTextFormat_isListFormat(self: pointer, ): bool {.importc: "QTextFormat_isListFormat".}
proc fcQTextFormat_isFrameFormat(self: pointer, ): bool {.importc: "QTextFormat_isFrameFormat".}
proc fcQTextFormat_isImageFormat(self: pointer, ): bool {.importc: "QTextFormat_isImageFormat".}
proc fcQTextFormat_isTableFormat(self: pointer, ): bool {.importc: "QTextFormat_isTableFormat".}
proc fcQTextFormat_isTableCellFormat(self: pointer, ): bool {.importc: "QTextFormat_isTableCellFormat".}
proc fcQTextFormat_toBlockFormat(self: pointer, ): pointer {.importc: "QTextFormat_toBlockFormat".}
proc fcQTextFormat_toCharFormat(self: pointer, ): pointer {.importc: "QTextFormat_toCharFormat".}
proc fcQTextFormat_toListFormat(self: pointer, ): pointer {.importc: "QTextFormat_toListFormat".}
proc fcQTextFormat_toTableFormat(self: pointer, ): pointer {.importc: "QTextFormat_toTableFormat".}
proc fcQTextFormat_toFrameFormat(self: pointer, ): pointer {.importc: "QTextFormat_toFrameFormat".}
proc fcQTextFormat_toImageFormat(self: pointer, ): pointer {.importc: "QTextFormat_toImageFormat".}
proc fcQTextFormat_toTableCellFormat(self: pointer, ): pointer {.importc: "QTextFormat_toTableCellFormat".}
proc fcQTextFormat_operatorEqual(self: pointer, rhs: pointer): bool {.importc: "QTextFormat_operatorEqual".}
proc fcQTextFormat_operatorNotEqual(self: pointer, rhs: pointer): bool {.importc: "QTextFormat_operatorNotEqual".}
proc fcQTextFormat_ToQVariant(self: pointer, ): pointer {.importc: "QTextFormat_ToQVariant".}
proc fcQTextFormat_setLayoutDirection(self: pointer, direction: cint): void {.importc: "QTextFormat_setLayoutDirection".}
proc fcQTextFormat_layoutDirection(self: pointer, ): cint {.importc: "QTextFormat_layoutDirection".}
proc fcQTextFormat_setBackground(self: pointer, brush: pointer): void {.importc: "QTextFormat_setBackground".}
proc fcQTextFormat_background(self: pointer, ): pointer {.importc: "QTextFormat_background".}
proc fcQTextFormat_clearBackground(self: pointer, ): void {.importc: "QTextFormat_clearBackground".}
proc fcQTextFormat_setForeground(self: pointer, brush: pointer): void {.importc: "QTextFormat_setForeground".}
proc fcQTextFormat_foreground(self: pointer, ): pointer {.importc: "QTextFormat_foreground".}
proc fcQTextFormat_clearForeground(self: pointer, ): void {.importc: "QTextFormat_clearForeground".}
proc fcQTextFormat_delete(self: pointer) {.importc: "QTextFormat_delete".}
proc fcQTextCharFormat_new(): ptr cQTextCharFormat {.importc: "QTextCharFormat_new".}
proc fcQTextCharFormat_new2(param1: pointer): ptr cQTextCharFormat {.importc: "QTextCharFormat_new2".}
proc fcQTextCharFormat_isValid(self: pointer, ): bool {.importc: "QTextCharFormat_isValid".}
proc fcQTextCharFormat_setFont(self: pointer, font: pointer, behavior: cint): void {.importc: "QTextCharFormat_setFont".}
proc fcQTextCharFormat_setFontWithFont(self: pointer, font: pointer): void {.importc: "QTextCharFormat_setFontWithFont".}
proc fcQTextCharFormat_font(self: pointer, ): pointer {.importc: "QTextCharFormat_font".}
proc fcQTextCharFormat_setFontFamily(self: pointer, family: struct_miqt_string): void {.importc: "QTextCharFormat_setFontFamily".}
proc fcQTextCharFormat_fontFamily(self: pointer, ): struct_miqt_string {.importc: "QTextCharFormat_fontFamily".}
proc fcQTextCharFormat_setFontFamilies(self: pointer, families: struct_miqt_array): void {.importc: "QTextCharFormat_setFontFamilies".}
proc fcQTextCharFormat_fontFamilies(self: pointer, ): pointer {.importc: "QTextCharFormat_fontFamilies".}
proc fcQTextCharFormat_setFontStyleName(self: pointer, styleName: struct_miqt_string): void {.importc: "QTextCharFormat_setFontStyleName".}
proc fcQTextCharFormat_fontStyleName(self: pointer, ): pointer {.importc: "QTextCharFormat_fontStyleName".}
proc fcQTextCharFormat_setFontPointSize(self: pointer, size: float64): void {.importc: "QTextCharFormat_setFontPointSize".}
proc fcQTextCharFormat_fontPointSize(self: pointer, ): float64 {.importc: "QTextCharFormat_fontPointSize".}
proc fcQTextCharFormat_setFontWeight(self: pointer, weight: cint): void {.importc: "QTextCharFormat_setFontWeight".}
proc fcQTextCharFormat_fontWeight(self: pointer, ): cint {.importc: "QTextCharFormat_fontWeight".}
proc fcQTextCharFormat_setFontItalic(self: pointer, italic: bool): void {.importc: "QTextCharFormat_setFontItalic".}
proc fcQTextCharFormat_fontItalic(self: pointer, ): bool {.importc: "QTextCharFormat_fontItalic".}
proc fcQTextCharFormat_setFontCapitalization(self: pointer, capitalization: cint): void {.importc: "QTextCharFormat_setFontCapitalization".}
proc fcQTextCharFormat_fontCapitalization(self: pointer, ): cint {.importc: "QTextCharFormat_fontCapitalization".}
proc fcQTextCharFormat_setFontLetterSpacingType(self: pointer, letterSpacingType: cint): void {.importc: "QTextCharFormat_setFontLetterSpacingType".}
proc fcQTextCharFormat_fontLetterSpacingType(self: pointer, ): cint {.importc: "QTextCharFormat_fontLetterSpacingType".}
proc fcQTextCharFormat_setFontLetterSpacing(self: pointer, spacing: float64): void {.importc: "QTextCharFormat_setFontLetterSpacing".}
proc fcQTextCharFormat_fontLetterSpacing(self: pointer, ): float64 {.importc: "QTextCharFormat_fontLetterSpacing".}
proc fcQTextCharFormat_setFontWordSpacing(self: pointer, spacing: float64): void {.importc: "QTextCharFormat_setFontWordSpacing".}
proc fcQTextCharFormat_fontWordSpacing(self: pointer, ): float64 {.importc: "QTextCharFormat_fontWordSpacing".}
proc fcQTextCharFormat_setFontUnderline(self: pointer, underline: bool): void {.importc: "QTextCharFormat_setFontUnderline".}
proc fcQTextCharFormat_fontUnderline(self: pointer, ): bool {.importc: "QTextCharFormat_fontUnderline".}
proc fcQTextCharFormat_setFontOverline(self: pointer, overline: bool): void {.importc: "QTextCharFormat_setFontOverline".}
proc fcQTextCharFormat_fontOverline(self: pointer, ): bool {.importc: "QTextCharFormat_fontOverline".}
proc fcQTextCharFormat_setFontStrikeOut(self: pointer, strikeOut: bool): void {.importc: "QTextCharFormat_setFontStrikeOut".}
proc fcQTextCharFormat_fontStrikeOut(self: pointer, ): bool {.importc: "QTextCharFormat_fontStrikeOut".}
proc fcQTextCharFormat_setUnderlineColor(self: pointer, color: pointer): void {.importc: "QTextCharFormat_setUnderlineColor".}
proc fcQTextCharFormat_underlineColor(self: pointer, ): pointer {.importc: "QTextCharFormat_underlineColor".}
proc fcQTextCharFormat_setFontFixedPitch(self: pointer, fixedPitch: bool): void {.importc: "QTextCharFormat_setFontFixedPitch".}
proc fcQTextCharFormat_fontFixedPitch(self: pointer, ): bool {.importc: "QTextCharFormat_fontFixedPitch".}
proc fcQTextCharFormat_setFontStretch(self: pointer, factor: cint): void {.importc: "QTextCharFormat_setFontStretch".}
proc fcQTextCharFormat_fontStretch(self: pointer, ): cint {.importc: "QTextCharFormat_fontStretch".}
proc fcQTextCharFormat_setFontStyleHint(self: pointer, hint: cint): void {.importc: "QTextCharFormat_setFontStyleHint".}
proc fcQTextCharFormat_setFontStyleStrategy(self: pointer, strategy: cint): void {.importc: "QTextCharFormat_setFontStyleStrategy".}
proc fcQTextCharFormat_fontStyleHint(self: pointer, ): cint {.importc: "QTextCharFormat_fontStyleHint".}
proc fcQTextCharFormat_fontStyleStrategy(self: pointer, ): cint {.importc: "QTextCharFormat_fontStyleStrategy".}
proc fcQTextCharFormat_setFontHintingPreference(self: pointer, hintingPreference: cint): void {.importc: "QTextCharFormat_setFontHintingPreference".}
proc fcQTextCharFormat_fontHintingPreference(self: pointer, ): cint {.importc: "QTextCharFormat_fontHintingPreference".}
proc fcQTextCharFormat_setFontKerning(self: pointer, enable: bool): void {.importc: "QTextCharFormat_setFontKerning".}
